# NoodleLibrary

./: .gitignore  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  justfile  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: f5dd318111b1_initial_tables.py
backup/: backup.sql  backup_noodles.sql
noodlelibrary/: database.py  main.py
noodlelibrary/models/: __init__.py  country.py  manufacture.py  noodle.py
noodlelibrary/repositories/: noodle_repository.py
noodlelibrary/routers/: noodle_routes.py  pages.py
noodlelibrary/schemas/: __init__.py  country.py  manufacture.py  noodle.py
noodlelibrary/services/: noodle_service.py
noodlelibrary/templates/: create.html  index.html  noodle_details.html
